# kibitzer

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  MACOS_SETUP.md  README.md  WINDOWS_SETUP.md  package.json  purpose.md  pyproject.toml  schema.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
apps/: README.md
configs/: README.md  default.yaml  experiment-models.example.yaml  personas.yaml  sensitive_domains.json  sensitive_domains.yaml
docs/: README.md  analysis-plan-a-gauge-design.md  analysis-plan-a-redesign.md  analysis-tier01-false-signals-conclusion.md  analysis-tier01-false-signals.md  architecture.md  data-model.md  gauge-dual-track.md  handoff-2026-07-07-alignment-dwell.md  handoff-2026-07-18-windows-launch-notifications.md  handoff-2026-07-21-anchor-pollution.md  handoff-audit-routing.md  handoff-d7-review-findings.md  handoff-d7-structure-review.md  handoff-d9-packaging-foundation.md  handoff-extension-bundling.md  handoff-gauge-python-shadow-notes.md  handoff-gauge-python-shadow.md  handoff-goal-enrichment.md  handoff-p0-persona-engine.md  handoff-p1-attachment-loop.md  handoff-p1-claude-design.md  handoff-p2-distribution.md  handoff-popup-provider-failure-details.md  handoff-provider-response-failures.md  handoff-refactor-predist.md  handoff-replay-cli.md  handoff-tier2-judge-writer.md  handoff-windows-pystray-lifecycle.md  handoff-windows-tray-start-server.md  idle-daemon-plan.md  implementation-plan.md  judgment-audit-plan.md  kibitzer-implementation-guideline.md  llm-wiki-integration.md  macos-menu-bar-plan.md  (+17 more)
wiki/: log.md  (+2 more)
(+470 files in other folders)
