[project]
name = "kibitzer"
version = "0.1.0"
description = "Local non-blocking attention guard for declared-goal browser sessions"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "aiosqlite>=0.20",
  "numpy>=2.0",
  "onnxruntime>=1.18",
  "tokenizers>=0.20",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]
package = [
  "pyinstaller>=6.21,<7",
  "pillow>=11.0,<13; sys_platform == 'win32'",
  "pystray>=0.19.5,<0.20; sys_platform == 'win32'",
]
windows = [
  "pillow>=11.0,<13",
  "pystray>=0.19.5,<0.20",
]

[project.scripts]
kibitzer = "apps.server.app.cli.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apps.server*"]
namespaces = true

[tool.setuptools.package-data]
"apps.server.app" = ["port-candidates.json"]

[tool.pytest.ini_options]
testpaths = ["apps/server/tests"]
